--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,19 @@ jobs:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
         os: ["ubuntu-latest"]
     runs-on: ${{ matrix.os }}
-    continue-on-error: true
+    #continue-on-error: true
     steps:
-    - uses: actions/checkout@v2
+    - name: source checkout
+      uses: actions/checkout@v3
+    
+    - name: debug
+      run: |
+      ls -lath
+      echo '---------------------'
+      pwd
+      echo '---------------------'
+      env
+      echo '---------------------'
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
