--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
 
     - name: pytest
       run: |
+        [ -f requirements.txt ] && rm requirements.txt
+        ln -s requirements-text.txt requirements.txt
         pip install -r requirements-test.txt
         flake8
         coverage run
