--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-attrs==22.2.0
-exceptiongroup==1.1.1
-iniconfig==2.0.0
-packaging==23.0
-pluggy==1.0.0
-pytest==7.2.2
-tomli==2.0.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
+dateutils==0.6.12
+idna==3.4
+python-dateutil==2.8.2
+pytz==2022.7.1
+requests==2.28.2
+six==1.16.0
+urllib3==1.26.15
