--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,11 @@
 attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
 coverage==7.2.2
+dateutils==0.6.12
 exceptiongroup==1.1.1
 flake8==6.0.0
+idna==3.4
 iniconfig==2.0.0
 mccabe==0.7.0
 packaging==23.0
@@ -9,4 +13,9 @@ pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pytest==7.2.2
+python-dateutil==2.8.2
+pytz==2022.7.1
+requests==2.28.2
+six==1.16.0
 tomli==2.0.1
+urllib3==1.26.15
