--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-        os: ["ubuntu-latest", "windows-latest"]
+        os: ["ubuntu-latest"]
     runs-on: ${{ matrix.os }}
     steps:
     - name: source checkout
@@ -20,9 +20,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: pytest
+    - name: pytest and lint and the other thing
       run: |
         pip install -r requirements-dev.txt
         flake8
         coverage run
 
+    - name: test and lint for python3.7
+      run: |
+        pip install -r requirements-dev-37.txt
+        flake8
+        coverage run
