--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
         os: ["ubuntu-latest"]
     runs-on: ${{ matrix.os }}
     steps:
@@ -25,11 +25,11 @@ jobs:
         pip install -r requirements-dev.txt
         flake8
         coverage run
-      if: !contains(${{ matrix.python-version }}, "3.7")
+      if: ${{ matrix.python-version > 3.7 }}
 
     - name: test and lint for python3.7
       run: |
         pip install -r requirements-dev-37.txt
         flake8
         coverage run
-      if: contains(${{ matrix.python-version }}, "3.7")
+      if: ${{ matrix.python-version == 3.7 }}
