--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,11 @@ jobs:
     steps:
     - name: debug
       run: |
+        echo these all work fine:
         echo ${{ matrix.python-version }}
-        echo  contains matrix.python-version, '3.7' ${{ contains(matrix.python-version, '3.7') }} 
-        echo ${{ matrix.python-version }}
-        echo ${{ matrix.python-version }}
+        echo  contains 'matrix.python-version', '3.7' ${{ contains(matrix.python-version, '3.7') }} 
+        echo  'matrix.python-version' != 3.7 ${{ matrix.python-version != 3.7 }}
+        echo  'matrix.python-version' == 3.7 ${{ matrix.python-version == 3.7 }}
 
     - name: source checkout
       uses: actions/checkout@v3
@@ -32,11 +33,11 @@ jobs:
         pip install -r requirements-dev.txt
         flake8
         coverage run
-      if: ${{ matrix.python-version != 3.7 }}
+      if: ${{ matrix.python-version > 3.7 }}
 
     - name: test and lint for python3.7
       run: |
         pip install -r requirements-dev-37.txt
         flake8
         coverage run
-      if: ${{ matrix.python-version == 3.7 }}
+      if: ${{ matrix.python-version <= 3.7 }}
